Modify the way to read XML setting file.

--- a/QuizRegisterApp/QuizRegisterApp/QuizRegisterApp.csproj
+++ b/QuizRegisterApp/QuizRegisterApp/QuizRegisterApp.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="XmlSetting.cs" />
+    <Compile Include="QuizSettingMapping.cs" />
     <Compile Include="InputFormGenerator.cs" />
     <Compile Include="InputForm.cs">
       <SubType>Form</SubType>
